Update bau para abrir.html

--- a/Bau/bau para abrir.html
+++ b/Bau/bau para abrir.html
@@ -1,49 +1,1 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Baú que muda de raridade</title>
-
-  <!-- SEO básico para poder aparecer no Google -->
-  <meta name="description" content="Baú interativo que sobe de raridade até lendário. Depois ele explode e mostra um coração pulsando com a mensagem: Te amo." />
-  <meta name="keywords" content="baú, raridade, comum, raro, épico, lendário, jogo, imagem interativa, te amo, coração" />
-
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-  <main class="container">
-    <h1>Baú de raridade</h1>
-    <p>Clique no baú para subir a raridade. Depois do lendário… surpresa.</p>
-
-    <div class="raridade">
-      Raridade atual:
-      <span id="badgeRaridade" class="raridade-badge raridade-comum">Comum</span>
-    </div>
-
-    <!-- Coloque as imagens na mesma pasta: bau-comum.png, bau-raro.png, bau-epico.png, bau-lendario.png -->
-    <div class="bau-wrapper" id="bau" data-raridade="comum" role="button" aria-label="Baú: clique para aumentar a raridade" tabindex="0">
-      <img
-        id="imagemBau"
-        class="bau-img"
-        src="bau-comum.png"
-        alt="Baú comum"
-      />
-    </div>
-
-  
-  </main>
-
-  <section class="overlay" id="finalOverlay" aria-hidden="true">
-    <div class="final-card" role="dialog" aria-label="Mensagem final">
-      <h2 class="te-amo">Te amo Mamãe!</h2>
-      <div class="heart-wrap" aria-hidden="true">
-        <div class="heart"></div>
-      </div>
-      <p class="final-hint">Como todas as raridades eu sou eteramente grato por ter vc!!</p>
-    </div>
-  </section>
-
-  <script src="script.js" defer></script>
-</body>
-</html>
+O arquivo Html estara no diretorio https://github.com/artesssn/HTML
